...
    <string name="prefs_category_security">Security</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_fingerprint">Fingerprint lock</string>
    <string name="prefs_fingerprint_summary">Enable passcode or pattern lock to enable this option</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
    <string name="prefs_camera_video_upload">Video uploads</string>
    <string name="prefs_camera_video_upload_summary">Automatically upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging history</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
...
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="list_layout">List layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_back">Back</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
...
    <string name="placeholder_filename">placeholder.txt</string>
    <string name="placeholder_filetype">PNG Image</string>
    <string name="placeholder_filesize">389 KB</string>
    <string name="placeholder_timestamp">2012/05/18 12:23 PM</string>
    <string name="placeholder_media_time">12:23:45</string>

    <string name="camera_picture_upload_on_wifi">Upload pictures via wifi only</string>
    <string name="camera_video_upload_on_wifi">Upload videos via wifi only</string>
    <string name="camera_upload_path">/CameraUpload</string>
    <string name="confirmation_disable_camera_uploads_title">Confirm</string>
    <string name="confirmation_disable_pictures_upload_message">Are you sure you want to disable this feature? The pending pictures will not be uploaded</string>
    <string name="confirmation_disable_videos_upload_message">Are you sure you want to disable this feature? The pending videos will not be uploaded</string>
    <string name="conflict_title">File conflict</string>
    <string name="conflict_description">There is a conflict in file %1$s, tap to solve it</string>
...
    <string name="conflict_use_server_version">server version</string>

    <string name="preview_image_description">Image preview</string>
    <string name="preview_image_error_unknown_format">This image cannot be shown</string>

    <string name="error__upload__local_file_not_copied">%1$s could not be copied to %2$s local folder</string>
    <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>

    <string name="share_link_no_support_share_api">Sorry, sharing is not enabled on your server. Please contact your
		administrator.</string>
    <string name="share_link_file_no_exist">Unable to share. Please check whether the file exists</string>
    <string name="share_link_file_error">An error occurred while trying to share this file or folder</string>
    <string name="unshare_link_file_no_exist">Unable to unshare. Please check whether the file exists</string>
...

    <string name="error_cant_bind_to_operations_service">Critical error: cannot perform operations</string>

    <string name="network_error_socket_exception">An error occurred while connecting with the server.</string>
    <string name="network_error_socket_timeout_exception">The server took too long to respond</string>
    <string name="network_error_connect_timeout_exception">The server took too long to connect</string>
    <string name="network_host_not_available">Server could not be reached</string>

    <string name="forbidden_permissions">You do not have permission %s</string>
    <string name="forbidden_permissions_rename">to rename this file</string>
    <string name="forbidden_permissions_delete">to delete this file</string>
    <string name="share_link_forbidden_permissions">to share this file</string>
    <string name="unshare_link_forbidden_permissions">to unshare this file</string>
...
    <string name="copy_file_invalid_overwrite">The file exists already in the destination folder</string>
    <string name="copy_file_error">An error occurred while trying to copy this file or folder</string>
    <string name="forbidden_permissions_copy">to copy this file</string>

    <string name="prefs_category_camera_upload">Camera uploads</string>

    <string name="prefs_camera_video_upload_path_title">Video upload path</string>
    <string name="sync_folder_failed_content">Synchronization of %1$s folder could not be completed</string>

    <string name="shared_subject_header">shared</string>
    <string name="with_you_subject_header">with you</string>

    <string name="subject_user_shared_with_you">%1$s shared \"%2$s\" with you</string>
...
    <string name="file_list__footer__file">1 file</string>
    <string name="file_list__footer__file_and_folder">1 file, 1 folder</string>
    <string name="file_list__footer__file_and_folders">1 file, %1$d folders</string>
    <string name="file_list__footer__files">%1$d files</string>
    <string name="file_list__footer__files_and_folder">%1$d files, 1 folder</string>
    <string name="file_list__footer__files_and_folders">%1$d files, %2$d folders</string>
    <string name="prefs_camera_upload_source_path_title">Camera folder (%1$s)</string>
    <string name="prefs_camera_upload_source_path_title_required">required</string>
    <string name="prefs_camera_upload_source_path_title_optional">optional</string>
    <string name="prefs_camera_upload_behaviour_dialogTitle">Original file will be</string>
    <string name="prefs_camera_upload_behaviour_title">Original file will be</string>
    <string name="upload_copy_files">Copy file</string>
    <string name="upload_move_files">Move file</string>

    <string name="pref_behaviour_entries_keep_file">kept in original folder</string>
    <string name="pref_behaviour_entries_move">moved to app folder</string>

    <string name="share_dialog_title">Share</string>
    <string name="share_file">Share %1$s</string>
    <string name="share_with_user_section_title">Users and Groups</string>
    <string name="share_no_users">No data shared with users yet</string>
    <string name="share_incompatible_version">To share with other users, your server needs to be at least version 8.2</string>
...
