...
            android:scaleType="centerCrop"
            android:background="@color/transparent" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/editShareButton"
            android:src="@drawable/ic_lead_pencil_grey"
            android:padding="14dp"
            android:background="@color/transparent" />

    </LinearLayout>

...
